--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="refresh" content="0;url=https://19259fa4-859b-4d2a-82c4-33d2cf6e4e96-00-2zyflmd5rtxa9.worf.replit.dev/" / >
+<meta http-equiv="refresh" content="0;url=https://3ae2b080-93f5-40e9-ad00-0ae1d643e47f-00-39e7k2ud1tauq.janeway.replit.dev/" / >
